fix: fix navigation and data-table responsiveness

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.data-table-view::-webkit-scrollbar {
+    display: none !important;
+}
+
 ::-webkit-scrollbar {
     background: none;
 }
